cluster/apps/whoami/whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami

---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http-ingressroute
  namespace: whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}`)
      kind: Rule
      #middlewares:
      #  - name: whoami-middleware-redirect-scheme
      services:
        - name: whoami
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https-ingressroute
  namespace: whoami
  annotations:
  #  kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-staging-do"
  #  kubernetes.io/tls-acme: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}`)
      kind: Rule
      middlewares:
        #- name: whoami-middleware-headers
        - name: whoami-middleware-basicauth
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-cert
    #certResolver: letsencrypt
  #- hosts:
  #  - whoami.${SECRET_DIGITALOCEAN_DOMAIN_01}
    

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-redirect-scheme
  namespace: whoami
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-headers
  namespace: whoami

spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 63072000
    #customRequestHeaders:
      #X-Frame-Options: "SAMEORIGIN"
    #customFrameOptionsValue: "SAMEORIGIN"
    #contentSecurityPolicy: "frame-ancestors 'self' whoami.untch.duckdns.org"
    #contentSecurityPolicy: "default-src 'self'; script-src https://whoami.untch.duckdns.org"
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://*.untch.duckdns.org"
      - "https://whoami.untch.duckdns.org"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-middleware-basicauth
  namespace: whoami
spec:
  basicAuth:
    secret: whoami-secret-basicauth
